[package]
name = "bench-tokio-reuse-sleep"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench"
harness = false

[features]
quanta = ["dep:quanta"]

[dependencies]
tokio = { version = "1", features = ["full"] }
quanta = { version = "0.11", optional = true }

[dev-dependencies]
criterion = "0.4"

[profile.release]
debug = true
